@@ -4,7 +4,8 @@ karl package Changelog
 Unreleased
 ----------
 
-- ...
+- LP #548352 Fixed bug which caused alerts to fail if a community had a comma
+  in it's title.
 
 3.25 (2010-03-25)
 -----------------
